force dark mode fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -116,7 +116,7 @@ button {
   margin-right: 5px;
 }
 
-@media (prefers-color-scheme: dark) {
+
   :root {
     color: #f6f6f6;
     background-color: #2f2f2f;
@@ -134,7 +134,7 @@ button {
   button:active {
     background-color: #0f0f0f69;
   }
-}
+
 
 .row {
   display: flex;
